--- a/src/assets/scss/baseColor.scss
+++ b/src/assets/scss/baseColor.scss
@@ -4,7 +4,7 @@ $main-font:#303133;
 $normal-font:#606266;
 $minor-font:#909399;
 $first-border:#DCDFE6;
-$seconde-border:#E4E7ED;
+$second-border:#E4E7ED;
 $third-border:#EBEEF5;
 $fourth-border:#F2F6FC;
 
